--- a/config/application.yml
+++ b/config/application.yml
@@ -3,21 +3,13 @@
 # pusher_app_id: "2954"
 # pusher_key: 7381a978f7dd7f9a1117
 # pusher_secret: abdc3b896a0ffb85d373
-# stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
-# stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
+ stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
+ stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
 #
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
-stripe_api_key: "sk_live_dSqzdUq80sw9GWmuoI0qJ9rL"
-# ENV["stripe_api_key"] # => "sk_live_dSqzdUq80sw9GWmuoI0qJ9rL"
-# ENV.key?("stripe_api_key") # => true
-# ENV["google_analytics_key"] # => nil
-# ENV.key?("google_analytics_key") # => false
-
-# Figaro.env.stripe_api_key # => "sk_live_dSqzdUq80sw9GWmuoI0qJ9rL"
-# Figaro.env.stripe_api_key? # => true
-# Figaro.env.google_analytics_key # => nil
-# Figaro.env.google_analytics_key? # => false
+#stripe_api_key: "sk_live_dSqzdUq80sw9GWmuoI0qJ9rL"
+#stripe_publishable_key: "pk_live_9lcthxpSIHbGwmdO941O1XVU"
 # # 
