--- a/config/application.yml
+++ b/config/application.yml
@@ -3,8 +3,8 @@
 # pusher_app_id: "2954"
 # pusher_key: 7381a978f7dd7f9a1117
 # pusher_secret: abdc3b896a0ffb85d373
- stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
- stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
+stripe_secret_key: "sk_test_TB8rwlHAlZz59PGJuXJRIwQu"
+stripe_publishable_key: "pk_test_o4TqJpzrUAROdBefiM1DQ3pu"
 #
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
